complier/src/net/zhiwenw/cbc/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package net.zhiwenw.cbc.parser;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class Parser implements ParserConstants {

   private boolean isType(String name) {
        return false;
    }

// Grammar
  final public void compliation_unit() throws ParseException {
    trace_call("compliation_unit");
    try {
      import_stmts();
      top_defs();
      jj_consume_token(0);
    } finally {
      trace_return("compliation_unit");
    }
  }

  final public void import_stmts() throws ParseException {
    trace_call("import_stmts");
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        import_stmt();
      }
    } finally {
      trace_return("import_stmts");
    }
  }

  final public void import_stmt() throws ParseException {
    trace_call("import_stmt");
    try {
      jj_consume_token(IMPORT);
      name();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 46:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(46);
        name();
      }
      jj_consume_token(47);
    } finally {
      trace_return("import_stmt");
    }
  }

  final public void top_defs() throws ParseException {
    trace_call("top_defs");
    try {
      label_3:
      while (true) {
        if (jj_2_1(1)) {
          ;
        } else {
          break label_3;
        }
        if (jj_2_2(2147483647)) {
          defun();
        } else if (jj_2_3(3)) {
          defvars();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CONST:
            defconst();
            break;
          case STRUCT:
            defstruct();
            break;
          case UNION:
            defunion();
            break;
          case TYPEDEF:
            typedef();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("top_defs");
    }
  }

  final public void defvars() throws ParseException {
    trace_call("defvars");
    try {
      storage();
      type();
      name();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        jj_consume_token(49);
        expr();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(50);
        name();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 49:
          jj_consume_token(49);
          expr();
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
      }
      jj_consume_token(47);
    } finally {
      trace_return("defvars");
    }
  }

  final public void defconst() throws ParseException {
    trace_call("defconst");
    try {
      jj_consume_token(CONST);
      type();
      name();
      jj_consume_token(49);
      expr();
      jj_consume_token(47);
    } finally {
      trace_return("defconst");
    }
  }

  final public void defun() throws ParseException {
    trace_call("defun");
    try {
      storage();
      type();
      name();
      jj_consume_token(48);
      params();
      jj_consume_token(51);
      block();
    } finally {
      trace_return("defun");
    }
  }

  final public void storage() throws ParseException {
    trace_call("storage");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
        jj_consume_token(STATIC);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } finally {
      trace_return("storage");
    }
  }

  final public void params() throws ParseException {
    trace_call("params");
    try {
      if (jj_2_4(2147483647)) {
        jj_consume_token(VOID);
      } else if (jj_2_5(1)) {
        fixedparams();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          jj_consume_token(50);
          jj_consume_token(52);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("params");
    }
  }

  final public void fixedparams() throws ParseException {
    trace_call("fixedparams");
    try {
      param();
      label_5:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(50);
        param();
      }
    } finally {
      trace_return("fixedparams");
    }
  }

  final public void param() throws ParseException {
    trace_call("param");
    try {
      type();
      name();
    } finally {
      trace_return("param");
    }
  }

  final public void block() throws ParseException {
    trace_call("block");
    try {
      jj_consume_token(53);
      defvar_list();
      stmts();
      jj_consume_token(54);
    } finally {
      trace_return("block");
    }
  }

  final public void defvar_list() throws ParseException {
    trace_call("defvar_list");
    try {
      label_6:
      while (true) {
        if (jj_2_7(1)) {
          ;
        } else {
          break label_6;
        }
        defvars();
      }
    } finally {
      trace_return("defvar_list");
    }
  }

  final public void defstruct() throws ParseException {
    trace_call("defstruct");
    try {
      jj_consume_token(STRUCT);
      name();
      member_list();
      jj_consume_token(47);
    } finally {
      trace_return("defstruct");
    }
  }

  final public void defunion() throws ParseException {
    trace_call("defunion");
    try {
      jj_consume_token(UNION);
      name();
      member_list();
      jj_consume_token(47);
    } finally {
      trace_return("defunion");
    }
  }

  final public void member_list() throws ParseException {
    trace_call("member_list");
    try {
      jj_consume_token(53);
      label_7:
      while (true) {
        if (jj_2_8(1)) {
          ;
        } else {
          break label_7;
        }
        slot();
        jj_consume_token(47);
      }
      jj_consume_token(54);
    } finally {
      trace_return("member_list");
    }
  }

  final public void slot() throws ParseException {
    trace_call("slot");
    try {
      type();
      name();
    } finally {
      trace_return("slot");
    }
  }

  final public void funcdecl() throws ParseException {
    trace_call("funcdecl");
    try {
      jj_consume_token(EXTERN);
      typeref();
      name();
      jj_consume_token(48);
      params();
      jj_consume_token(51);
      jj_consume_token(47);
    } finally {
      trace_return("funcdecl");
    }
  }

  final public void vardecl() throws ParseException {
    trace_call("vardecl");
    try {
      jj_consume_token(EXTERN);
      type();
      name();
      jj_consume_token(47);
    } finally {
      trace_return("vardecl");
    }
  }

  final public void type() throws ParseException {
    trace_call("type");
    try {
      typeref();
    } finally {
      trace_return("type");
    }
  }

  final public void typeref() throws ParseException {
    trace_call("typeref");
    try {
      typeref_base();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 48:
        case 55:
        case 57:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_8;
        }
        if (jj_2_9(2)) {
          jj_consume_token(55);
          jj_consume_token(56);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 55:
            jj_consume_token(55);
            jj_consume_token(INTEGER);
            jj_consume_token(56);
            break;
          case 57:
            jj_consume_token(57);
            break;
          case 48:
            jj_consume_token(48);
            param_typerefs();
            jj_consume_token(51);
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("typeref");
    }
  }

  final public void param_typerefs() throws ParseException {
    trace_call("param_typerefs");
    try {
      if (jj_2_10(2147483647)) {
        jj_consume_token(VOID);
      } else if (jj_2_11(1)) {
        fixedparam_typerefs();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          jj_consume_token(50);
          jj_consume_token(52);
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("param_typerefs");
    }
  }

  final public void fixedparam_typerefs() throws ParseException {
    trace_call("fixedparam_typerefs");
    try {
      typeref();
      label_9:
      while (true) {
        if (jj_2_12(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(50);
        typeref();
      }
    } finally {
      trace_return("fixedparam_typerefs");
    }
  }

  final public void typeref_base() throws ParseException {
    trace_call("typeref_base");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case SHORT:
        jj_consume_token(SHORT);
        break;
      case INT:
        jj_consume_token(INT);
        break;
      case LONG:
        jj_consume_token(LONG);
        break;
      default:
        jj_la1[11] = jj_gen;
        if (jj_2_13(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(CHAR);
        } else if (jj_2_14(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(SHORT);
        } else if (jj_2_15(2)) {
          jj_consume_token(UNSIGNED);
          jj_consume_token(INT);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UNSIGNED:
            jj_consume_token(UNSIGNED);
            jj_consume_token(LONG);
            break;
          case STRUCT:
            jj_consume_token(STRUCT);
            jj_consume_token(IDENTIFIER);
            break;
          case UNION:
            jj_consume_token(UNION);
            jj_consume_token(IDENTIFIER);
            break;
          default:
            jj_la1[12] = jj_gen;
            if (isType(getToken(1).image)) {
              jj_consume_token(IDENTIFIER);
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } finally {
      trace_return("typeref_base");
    }
  }

  final public void typedef() throws ParseException {
    trace_call("typedef");
    try {
      jj_consume_token(TYPEDEF);
      typeref();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(47);
    } finally {
      trace_return("typedef");
    }
  }

  final public void stmts() throws ParseException {
    trace_call("stmts");
    try {
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case SWITCH:
        case WHILE:
        case DO:
        case FOR:
        case RETURN:
        case BREAK:
        case CONTINUE:
        case GOTO:
        case SIZEOF:
        case IDENTIFIER:
        case INTEGER:
        case CHARACTER:
        case STRING:
        case 47:
        case 48:
        case 53:
        case 57:
        case 80:
        case 83:
        case 84:
        case 87:
        case 88:
        case 89:
        case 90:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_10;
        }
        stmt();
      }
    } finally {
      trace_return("stmts");
    }
  }

  final public void stmt() throws ParseException {
    trace_call("stmt");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        jj_consume_token(47);
        break;
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_16(2)) {
          labeled_stmt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SIZEOF:
          case IDENTIFIER:
          case INTEGER:
          case CHARACTER:
          case STRING:
          case 48:
          case 57:
          case 80:
          case 83:
          case 84:
          case 87:
          case 88:
          case 89:
          case 90:
            expr();
            jj_consume_token(47);
            break;
          case 53:
            block();
            break;
          case IF:
            if_stmt();
            break;
          case WHILE:
            while_stmt();
            break;
          case DO:
            dowhile_stmt();
            break;
          case FOR:
            for_stmt();
            break;
          case SWITCH:
            switch_stmt();
            break;
          case BREAK:
            break_stmt();
            break;
          case CONTINUE:
            continue_stmt();
            break;
          case GOTO:
            goto_stmt();
            break;
          case RETURN:
            return_stmt();
            break;
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("stmt");
    }
  }

  final public void labeled_stmt() throws ParseException {
    trace_call("labeled_stmt");
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(58);
      stmt();
    } finally {
      trace_return("labeled_stmt");
    }
  }

  final public void if_stmt() throws ParseException {
    trace_call("if_stmt");
    try {
      jj_consume_token(IF);
      jj_consume_token(48);
      expr();
      jj_consume_token(51);
      stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        stmt();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
    } finally {
      trace_return("if_stmt");
    }
  }

  final public void while_stmt() throws ParseException {
    trace_call("while_stmt");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(48);
      expr();
      jj_consume_token(51);
      stmt();
    } finally {
      trace_return("while_stmt");
    }
  }

  final public void dowhile_stmt() throws ParseException {
    trace_call("dowhile_stmt");
    try {
      jj_consume_token(DO);
      stmt();
      jj_consume_token(WHILE);
      jj_consume_token(48);
      expr();
      jj_consume_token(51);
      jj_consume_token(47);
    } finally {
      trace_return("dowhile_stmt");
    }
  }

  final public void for_stmt() throws ParseException {
    trace_call("for_stmt");
    try {
      jj_consume_token(FOR);
      jj_consume_token(48);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case 48:
      case 57:
      case 80:
      case 83:
      case 84:
      case 87:
      case 88:
      case 89:
      case 90:
        expr();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(47);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case 48:
      case 57:
      case 80:
      case 83:
      case 84:
      case 87:
      case 88:
      case 89:
      case 90:
        expr();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(47);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIZEOF:
      case IDENTIFIER:
      case INTEGER:
      case CHARACTER:
      case STRING:
      case 48:
      case 57:
      case 80:
      case 83:
      case 84:
      case 87:
      case 88:
      case 89:
      case 90:
        expr();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(51);
      stmt();
    } finally {
      trace_return("for_stmt");
    }
  }

  final public void switch_stmt() throws ParseException {
    trace_call("switch_stmt");
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(48);
      expr();
      jj_consume_token(51);
      jj_consume_token(53);
      case_clauses();
      jj_consume_token(54);
    } finally {
      trace_return("switch_stmt");
    }
  }

  final public void case_clauses() throws ParseException {
    trace_call("case_clauses");
    try {
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_11;
        }
        case_clause();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DEFAULT_:
        default_clause();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
    } finally {
      trace_return("case_clauses");
    }
  }

  final public void default_clause() throws ParseException {
    trace_call("default_clause");
    try {
      jj_consume_token(DEFAULT_);
      jj_consume_token(58);
      case_body();
    } finally {
      trace_return("default_clause");
    }
  }

  final public void case_clause() throws ParseException {
    trace_call("case_clause");
    try {
      cases();
      case_body();
    } finally {
      trace_return("case_clause");
    }
  }

  final public void cases() throws ParseException {
    trace_call("cases");
    try {
      label_12:
      while (true) {
        jj_consume_token(CASE);
        primary();
        jj_consume_token(58);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CASE:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_12;
        }
      }
    } finally {
      trace_return("cases");
    }
  }

  final public void case_body() throws ParseException {
    trace_call("case_body");
    try {
      label_13:
      while (true) {
        stmt();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case SWITCH:
        case WHILE:
        case DO:
        case FOR:
        case RETURN:
        case BREAK:
        case CONTINUE:
        case GOTO:
        case SIZEOF:
        case IDENTIFIER:
        case INTEGER:
        case CHARACTER:
        case STRING:
        case 47:
        case 48:
        case 53:
        case 57:
        case 80:
        case 83:
        case 84:
        case 87:
        case 88:
        case 89:
        case 90:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_13;
        }
      }
    } finally {
      trace_return("case_body");
    }
  }

  final public void goto_stmt() throws ParseException {
    trace_call("goto_stmt");
    try {
      jj_consume_token(GOTO);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(47);
    } finally {
      trace_return("goto_stmt");
    }
  }

  final public void break_stmt() throws ParseException {
    trace_call("break_stmt");
    try {
      jj_consume_token(BREAK);
      jj_consume_token(47);
    } finally {
      trace_return("break_stmt");
    }
  }

  final public void continue_stmt() throws ParseException {
    trace_call("continue_stmt");
    try {
      jj_consume_token(CONTINUE);
      jj_consume_token(47);
    } finally {
      trace_return("continue_stmt");
    }
  }

  final public void return_stmt() throws ParseException {
    trace_call("return_stmt");
    try {
      if (jj_2_17(2)) {
        jj_consume_token(RETURN);
        jj_consume_token(47);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
          jj_consume_token(RETURN);
          expr();
          jj_consume_token(47);
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("return_stmt");
    }
  }

  final public void expr() throws ParseException {
    trace_call("expr");
    try {
      if (jj_2_18(2147483647)) {
        term();
        jj_consume_token(49);
        expr();
      } else if (jj_2_19(2147483647)) {
        term();
        opassign_op();
        expr();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SIZEOF:
        case IDENTIFIER:
        case INTEGER:
        case CHARACTER:
        case STRING:
        case 48:
        case 57:
        case 80:
        case 83:
        case 84:
        case 87:
        case 88:
        case 89:
        case 90:
          expr10();
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("expr");
    }
  }

  final public String opassign_op() throws ParseException {
    trace_call("opassign_op");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
        jj_consume_token(59);
              {if (true) return "+";}
        break;
      case 60:
        jj_consume_token(60);
              {if (true) return "-";}
        break;
      case 61:
        jj_consume_token(61);
              {if (true) return "*";}
        break;
      case 62:
        jj_consume_token(62);
              {if (true) return "/";}
        break;
      case 63:
        jj_consume_token(63);
              {if (true) return "%";}
        break;
      case 64:
        jj_consume_token(64);
              {if (true) return "&";}
        break;
      case 65:
        jj_consume_token(65);
              {if (true) return "|";}
        break;
      case 66:
        jj_consume_token(66);
              {if (true) return "^";}
        break;
      case 67:
        jj_consume_token(67);
              {if (true) return "<<";}
        break;
      case 68:
        jj_consume_token(68);
              {if (true) return ">>";}
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("opassign_op");
    }
  }

  final public void expr10() throws ParseException {
    trace_call("expr10");
    try {
      expr9();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 69:
        jj_consume_token(69);
        expr();
        jj_consume_token(58);
        expr10();
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
    } finally {
      trace_return("expr10");
    }
  }

  final public void expr9() throws ParseException {
    trace_call("expr9");
    try {
      expr8();
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 70:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_14;
        }
        jj_consume_token(70);
        expr8();
      }
    } finally {
      trace_return("expr9");
    }
  }

  final public void expr8() throws ParseException {
    trace_call("expr8");
    try {
      expr7();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 71:
          ;
          break;
        default:
          jj_la1[29] = jj_gen;
          break label_15;
        }
        jj_consume_token(71);
        expr7();
      }
    } finally {
      trace_return("expr8");
    }
  }

  final public void expr7() throws ParseException {
    trace_call("expr7");
    try {
      expr6();
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 72:
        case 73:
        case 74:
        case 75:
        case 76:
        case 77:
          ;
          break;
        default:
          jj_la1[30] = jj_gen;
          break label_16;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 72:
          jj_consume_token(72);
          expr6();
          break;
        case 73:
          jj_consume_token(73);
          expr6();
          break;
        case 74:
          jj_consume_token(74);
          expr6();
          break;
        case 75:
          jj_consume_token(75);
          expr6();
          break;
        case 76:
          jj_consume_token(76);
          expr6();
          break;
        case 77:
          jj_consume_token(77);
          expr6();
          break;
        default:
          jj_la1[31] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("expr7");
    }
  }
